--- a/42/mod1/hdezier-erobert/Makefile
+++ b/42/mod1/hdezier-erobert/Makefile
@@ -4,6 +4,7 @@ TARGET = bin/runner
 SRC_DIR = src
 INC_DIR = include
 BUILD_DIR = build
+LIB_DIR = lib
 
 #Options
 CC = g++
@@ -13,28 +14,32 @@ RM = rm -rf
 #List classes here
 CLASS = main\
 		Map\
-		Gui_mlx\
+		IGui_mlx\
+
+#List interfaces here
+INTERFACE = IGui\
+			IEventHandler\
+
 #Auto var
 SRC = $(addsuffix $(SRC_EXT), $(addprefix $(SRC_DIR)/, $(CLASS)))
 OBJ = $(addsuffix .o, $(addprefix $(BUILD_DIR)/, $(CLASS)))
 DEP = $(addsuffix .h, $(addprefix $(INC_DIR)/, $(CLASS)))
 
 #Flags
-CFLAGS = -MM -Wall -Wextra -Werror -O3 -g -std=c++98
+CFLAGS = -MMD -Wall -Wextra -Werror -O3 -g -std=c++98
 LFLAGS =
 
 #Libs
-LIB_LOCAL = ./lib/minilibx_macos/
-LIB_GLOBAL = X11 Xext mlx
-LIB_OTHER = -framework OpenGL -framework AppKit -L/usr/X11R6/lib
-LIB += $(addprefix -L,$(LIB_LOCAL))
-LIB += $(addprefix -l,$(LIB_GLOBAL))
-LIB += $(LIB_OTHER)
+LIB_LOCAL = /usr/X11R6 ./lib/minilibx_macos
+LIB_GLOBAL = mlx Xext X11
+LIB_OTHER = -framework OpenGL -framework AppKit
+LIBS += $(addsuffix /lib, $(addprefix -L, $(LIB_LOCAL)))
+LIBS += $(addprefix -l,$(LIB_GLOBAL))
+LIBS += $(LIB_OTHER)
 
 #Includes
 INC += $(addprefix -I,$(INC_DIR))
-INC += $(addprefix -I,$(LIB_LOCAL))
-INC += -I/usr/X11R6/include
+INC += $(addsuffix /include, $(addprefix -I, $(LIB_LOCAL)))
 
 #RULES
 all : dirbuild $(TARGET)
@@ -56,8 +61,8 @@ dirbuild:
 
 #Build rules
 $(TARGET) : $(OBJ)
-	@echo "\n\033[1;4;34mDEP:\033[0m\n"$<"\n\033[36mLinking objects ...\033[0m\n"
-	$(CC) $(CFLAGS) $(LIBS) $^ -o $@
+	@echo "\n\033[1;4;34mDEP:\033[0m\n"$^"\n\033[36mLinking objects ...\033[0m\n"
+	$(CC) $(CFLAGS) $^ -o $@ $(LIBS)
 
 $(BUILD_DIR)/%.o: $(SRC_DIR)/%$(SRC_EXT) $(DEP)
 	@echo "\n\033[1;4;34mSRC:\033[0m\n"$<"\n\033[36mCompiling src ...\033[0m\n"
@@ -67,5 +72,5 @@ $(OBJ): $(DEP)
 
 #Tests
 test:
-	$(CC) $(CFLAGS) test/test.cpp $(INC) $(LIB) -o bin/test
+	$(CC) $(CFLAGS) test/test.cpp $(INC) $(LIBS) -o bin/test
 
