--- a/util/project_ruler/Cproj/Makefile
+++ b/util/project_ruler/Cproj/Makefile
@@ -18,19 +18,15 @@ CLASS = main\
 		WinCurse_menu\
 		WinCurse_proj\
 		Mod_classList\
-		Mod_classListFactory\
-		Mod_attrList\
-		Mod_attrListFactory\
+		ModuleFactory\
 
 #List interfaces here
 INTERFACE = Igui\
 			IWinCurse_mod\
-			IFactoryMod\
 
 #Auto var
 SRC = $(addsuffix $(SRC_EXT), $(addprefix $(SRC_DIR)/, $(CLASS)))
 OBJ = $(addsuffix .o, $(addprefix $(BUILD_DIR)/, $(CLASS)))
-DEP = $(addsuffix .h, $(addprefix $(INC_DIR)/, $(CLASS)))
 LIBS = $(addprefix -L,$(LIB_DIR))
 
 #Flags
@@ -75,6 +71,4 @@ $(TARGET) : $(OBJ)
 $(BUILD_DIR)/%.o: $(SRC_DIR)/%$(SRC_EXT)
 	@echo "\n\033[1;4;34mSRC:\033[0m\n"$<"\n\033[36mCompiling src ...\033[0m"
 	$(CC) $(CFLAGS) $(INC) -o $@ -c $<
-
-$(OBJ): $(DEP)
 
