--- a/util/project_ruler/cfg/templates/Makefile.template
+++ b/util/project_ruler/cfg/templates/Makefile.template
@@ -52,9 +52,12 @@ re : fclean all
 dirbuild:
 	mkdir -p build
 
-.PHONY: all clean fclean re dirbuild
+dirbin:
+	mkdir -p bin
 
-.SILENT: dirbuild
+.PHONY: all clean fclean re
+
+.SILENT: dirbuild dirbin
 
 #Build rules
 $(TARGET) : $(OBJ)
