--- a/util/Rool/config/templates/include.template
+++ b/util/Rool/config/templates/include.template
@@ -1,11 +1,11 @@
-#ifndef ${NAME_MAJ}_H
-# define ${NAME_MAJ}_H
+#ifndef ${INC_GUARD}_H
+# define ${INC_GUARD}_H
 
-class ${NAME}
+class ${CLASS_NAME}
 {
 public:
-	${NAME}(void);
-	~${NAME}(void);
+	${CLASS_NAME}(void);
+	~${CLASS_NAME}(void);
 protected:
 private:
 };
