--- a/util/Rool/config/templates/inherit_include.template
+++ b/util/Rool/config/templates/inherit_include.template
@@ -1,13 +1,13 @@
-#ifndef ${NAME_MAJ}_H
-# define ${NAME_MAJ}_H
+#ifndef ${INC_GUARD}_H
+# define ${INC_GUARD}_H
 
-# include "${PARENT}.hpp"
+$[# include "${PARENT}.hpp"]
 
-class ${NAME} : ${PARENT_ACCESS} ${PARENT}
+class ${CLASS_NAME} : $[${ACCESS} ${PARENT}]
 {
 public:
-	${NAME}(void);
-	~${NAME}(void);
+	${CLASS_NAME}(void);
+	~${CLASS_NAME}(void);
 protected:
 private:
 };
