--- a/util/Rool/config/templates/inherit_include.template
+++ b/util/Rool/config/templates/inherit_include.template
@@ -1,9 +1,8 @@
 #ifndef ${INC_GUARD}_H
 # define ${INC_GUARD}_H
 
-$[# include "${PARENT}.hpp"]
-
-class ${CLASS_NAME} : $[${ACCESS} ${PARENT}]
+$[parent_include_self]
+class ${CLASS_NAME} : $[parent_include_trueName]
 {
 public:
 	${CLASS_NAME}(void);
