--- a/sandbox/hdezier/lib/LoadShaders/Makefile
+++ b/sandbox/hdezier/lib/LoadShaders/Makefile
@@ -1,4 +1,4 @@
-TARGET = bin/runner
+TARGET = lib/libLoadShaders.a
 
 #Directories
 SRC_DIR = src
@@ -12,13 +12,10 @@ SRC_EXT = .cpp
 RM = rm -rf
 
 #List classes here
-CLASS = main\
-		SimpleTriangle\
-		X11Win\
+CLASS = LoadShaders\
 
 #List interfaces here
 INTERFACE = \
-		IObject\
 
 #Auto var
 SRC = $(addsuffix $(SRC_EXT), $(addprefix $(SRC_DIR)/, $(CLASS)))
@@ -30,8 +27,8 @@ CFLAGS = -MMD -Wall -Wextra -Werror -O3 -g -std=c++98
 LFLAGS =
 
 #Libs
-LIB_LOCAL = lib/LoadShaders
-LIB_GLOBAL = X11 GL LoadShaders
+LIB_LOCAL =
+LIB_GLOBAL = GL
 LIB_OTHER =
 LIBS += $(addsuffix /lib, $(addprefix -L, $(LIB_LOCAL)))
 LIBS += $(addprefix -l,$(LIB_GLOBAL))
@@ -65,7 +62,7 @@ dirbin:
 #Build rules
 $(TARGET) : $(OBJ)
 	@echo "\n\033[1;4;34mDEP:\033[0m\n"$^"\n\033[36mLinking objects ...\033[0m\n"
-	$(CC) $(CFLAGS) $^ -o $@ $(LIBS)
+	ar -rcs $@ $^
 
 $(BUILD_DIR)/%.o: $(SRC_DIR)/%$(SRC_EXT)
 	@echo "\n\033[1;4;34mSRC:\033[0m\n"$<"\n\033[36mCompiling src ...\033[0m"
