--- a/42/mod1/hdezier-erobert/Makefile
+++ b/42/mod1/hdezier-erobert/Makefile
@@ -1,77 +1,47 @@
-TARGET = bin/runner
+#******************************************************************************#
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: erobert <erobert@student.42.fr>            +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2015/01/05 09:31:53 by erobert           #+#    #+#              #
+#    Updated: 2015/02/08 14:11:45 by erobert          ###   ########.fr        #
+#                                                                              #
+#******************************************************************************#
 
-#Directories
-SRC_DIR = src
-INC_DIR = include
-BUILD_DIR = build
-LIB_DIR = lib
-
-#Options
+NAME = mod1
+FILES = Landscape.cpp UserInterface.cpp ft_parse.cpp Parser.cpp
+SRCS = $(addprefix srcs/, $(FILES))
+OBJS = $(SRCS:srcs/%.cpp=objs/%.o)
+TMPS = $(SRCS:.cpp=.cpp~) $(SRCS:.cpp=.hpp~) Makefile~
 CC = g++
-SRC_EXT = .cpp
-RM = rm -rf
+CFLAGS = -Wall -Werror -Wextra
+LFLAGS = -L/usr/X11R6/lib -lX11 -lXext -lGL -lGLU
+IFLAGS = -Iinclude/ -I/usr/X11R6/include
 
-#List classes here
-CLASS = main\
-		Map\
-		IGui_mlx\
+.PHONY: all clean fclean re
 
-#List interfaces here
-INTERFACE = IGui\
-			IEventHandler\
+.SILENT: objs_dir
 
-#Auto var
-SRC = $(addsuffix $(SRC_EXT), $(addprefix $(SRC_DIR)/, $(CLASS)))
-OBJ = $(addsuffix .o, $(addprefix $(BUILD_DIR)/, $(CLASS)))
-DEP = $(addsuffix .h, $(addprefix $(INC_DIR)/, $(CLASS)))
-LIBS = $(addprefix -L,$(LIB_DIR))
+all: objs_dir $(NAME)
 
-#Flags
-CFLAGS = -MMD -Wall -Wextra -Werror -O3 -g -std=c++98
-LFLAGS =
+all: objs_dir $(NAME)
 
-#Libs
-LIB_LOCAL = /usr/X11R6 ./lib/minilibx_macos
-LIB_GLOBAL = mlx Xext X11
-LIB_OTHER = -framework OpenGL -framework AppKit
-LIBS += $(addsuffix /lib, $(addprefix -L, $(LIB_LOCAL)))
-LIBS += $(addprefix -l,$(LIB_GLOBAL))
-LIBS += $(LIB_OTHER)
+$(NAME): $(OBJS)
+	$(CC) $(CFLAGS) -o $(NAME) $(OBJS) $(LFLAGS)
 
-#Includes
-INC += $(addprefix -I,$(INC_DIR))
-INC += $(addsuffix /include, $(addprefix -I, $(LIB_LOCAL)))
+objs/%.o : srcs/%.cpp
+	$(CC) $(CFLAGS) $(IFLAGS) -o $@ -c $^
 
-#RULES
-all : dirbuild $(TARGET)
+objs_dir:
+	mkdir -p objs
 
-clean :
-	$(RM) $(BUILD_DIR)
+clean:
+	/bin/rm -f $(OBJS) $(TMPS)
+	/bin/rm -rf objs
 
-fclean :
-	$(RM) $(BUILD_DIR) $(TARGET)
+fclean: clean
+	/bin/rm -f $(NAME)
 
-re : fclean all
-
-dirbuild:
-	mkdir -p build
-
-.PHONY: all clean fclean re dirbuild
-
-.SILENT: dirbuild
-
-#Build rules
-$(TARGET) : $(OBJ)
-	@echo "\n\033[1;4;34mDEP:\033[0m\n"$^"\n\033[36mLinking objects ...\033[0m\n"
-	$(CC) $(CFLAGS) $^ -o $@ $(LIBS)
-
-$(BUILD_DIR)/%.o: $(SRC_DIR)/%$(SRC_EXT) $(DEP)
-	@echo "\n\033[1;4;34mSRC:\033[0m\n"$<"\n\033[36mCompiling src ...\033[0m\n"
-	$(CC) $(CFLAGS) $(INC) -o $@ -c $<
-
-$(OBJ): $(DEP)
-
-#Tests
-test:
-	$(CC) $(CFLAGS) test/test.cpp $(INC) $(LIBS) -o bin/test
-
+re: fclean all
