clean et mise public rool

--- a/util/Rool/config/templates/MakeLib.template
+++ b/util/Rool/config/templates/MakeLib.template
@@ -1,4 +1,4 @@
-TARGET = bin/runner
+TARGET = lib/lib${NAME}.a
 
 #Directories
 SRC_DIR = src
@@ -12,24 +12,25 @@ SRC_EXT = .cpp
 RM = rm -rf
 
 #List classes here
-CLASS = main\
-
-#List interfaces here
-INTERFACE =
+CLASS = ${NAME}\
 
 #Auto var
 SRC = $(addsuffix $(SRC_EXT), $(addprefix $(SRC_DIR)/, $(CLASS)))
 OBJ = $(addsuffix .o, $(addprefix $(BUILD_DIR)/, $(CLASS)))
+DEP = $(addsuffix .d, $(addprefix $(BUILD_DIR)/, $(CLASS)))
 LIBS = $(addprefix -L,$(LIB_DIR))
 
 #Flags
-CFLAGS = -MMD -Wall -Wextra -Werror -O3 -g -std=c++98
+CFLAGS =-MMD -Wall -Wextra -Werror -O3 -g -std=c++98
 LFLAGS =
 
 #Libs
-LIB_LOCAL =
-LIB_GLOBAL =
-LIB_OTHER =
+LIB_LOCAL = \
+
+LIB_GLOBAL = \
+
+LIB_OTHER = \
+
 LIBS += $(addsuffix /lib, $(addprefix -L, $(LIB_LOCAL)))
 LIBS += $(addprefix -l,$(LIB_GLOBAL))
 LIBS += $(LIB_OTHER)
@@ -39,7 +40,7 @@ INC += $(addprefix -I,$(INC_DIR))
 INC += $(addsuffix /include, $(addprefix -I, $(LIB_LOCAL)))
 
 #RULES
-all : dirbuild $(TARGET)
+all : dirbin $(TARGET)
 
 clean :
 	$(RM) $(BUILD_DIR)
@@ -48,9 +49,6 @@ fclean :
 	$(RM) $(BUILD_DIR) $(TARGET)
 
 re : fclean all
-
-dirbuild:
-	mkdir -p build
 
 dirbin:
 	mkdir -p bin
@@ -61,9 +59,12 @@ dirbin:
 
 #Build rules
 $(TARGET) : $(OBJ)
-	@echo "\n\033[1;4;34mDEP:\033[0m\n"$^"\n\033[36mLinking objects ...\033[0m\n"
-	$(CC) $(CFLAGS) $^ -o $@ $(LIBS)
+	@echo "\n\033[1;4;34mDEP:\033[0m\n"$^"\n\033[36mCreate lib ...\033[0m\n"
+	ar -rcs $@ $^
 
 $(BUILD_DIR)/%.o: $(SRC_DIR)/%$(SRC_EXT)
+	@mkdir -p $(dir $@)
 	@echo "\n\033[1;4;34mSRC:\033[0m\n"$<"\n\033[36mCompiling src ...\033[0m"
-	$(CC) $(CFLAGS) $(INC) -o $@ -c $<
+	$(CC) $(CFLAGS) $(INC) $(LIBS) -o $@ -c $<
+
+-include $(DEP)
