--- a/util/Rool/config/templates/Makefile.template
+++ b/util/Rool/config/templates/Makefile.template
@@ -28,9 +28,12 @@ CFLAGS =-MMD -Wall -Wextra -Werror -O3 -g -std=c++98
 LFLAGS =
 
 #Libs
-LIB_LOCAL =
-LIB_GLOBAL =
-LIB_OTHER =
+LIB_LOCAL = \
+
+LIB_GLOBAL = \
+
+LIB_OTHER = \
+
 LIBS += $(addsuffix /lib, $(addprefix -L, $(LIB_LOCAL)))
 LIBS += $(addprefix -l,$(LIB_GLOBAL))
 LIBS += $(LIB_OTHER)
