--- a/42/N-Puzzle/hdezier-erobert/Makefile
+++ b/42/N-Puzzle/hdezier-erobert/Makefile
@@ -13,6 +13,9 @@ RM = rm -rf
 
 #List classes here
 CLASS = \
+		Heuristic/NTiles\
+		Heuristic/MaxSwap\
+		Heuristic/Hamming\
 		Heuristic/LinearConflict\
 		State\
 		ParserLexer/Lexer\
