--- a/42/Nibbler/hdezier-erobert/f2/Makefile
+++ b/42/Nibbler/hdezier-erobert/f2/Makefile
@@ -6,7 +6,7 @@
 #    By: erobert <erobert@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2015/01/05 09:31:53 by erobert           #+#    #+#              #
-#    Updated: 2015/04/02 18:44:32 by erobert          ###   ########.fr        #
+#    Updated: 2015/04/07 16:00:46 by erobert          ###   ########.fr        #
 #                                                                              #
 #******************************************************************************#
 
@@ -16,19 +16,22 @@ SRCS = $(addprefix srcs/, $(FILES))
 OBJS = $(SRCS:srcs/%.cpp=objs/%.o)
 INCS = $(SRCS:srcs/%.cpp=incs/%.hpp)
 TMPS = $(SRCS:.cpp=.cpp~) $(INCS:.hpp=.hpp~) Makefile~
+PWD = $(shell pwd)
+ASFML = SFML-2.2-osx-clang-universal
+DSFML = SFML
 CC = g++
 CFLAGS = -Wall -Wextra -Werror
-IFLAGS = -Iincs/ -I../incs/
-LFLAGS = -lncurses -ltermcap
+IFLAGS = -Iincs/ -I../incs/ -I$(DSFML)/include/
+LFLAGS = -LSFML/lib -lsfml-graphics -lsfml-window -lsfml-system
 
 .PHONY: all clean objs_dir fclean re
 
 .SILENT: objs_dir
 
-all: objs_dir $(NAME)
+all: objs_dir $(DSFML) $(NAME)
 
 $(NAME): $(OBJS)
-	$(CC) $(CFLAGS) -shared -fPIC -o $(NAME) $(OBJS) $(LFLAGS)
+	$(CC) $(CFLAGS) -dynamiclib -rpath $(PWD)/SFML/lib/ -o $(NAME) $(OBJS) $(LFLAGS)
 
 objs/%.o : srcs/%.cpp
 	$(CC) $(CFLAGS) -Iinc $(IFLAGS) -o $@ -c $^
@@ -36,11 +39,20 @@ objs/%.o : srcs/%.cpp
 objs_dir:
 	mkdir -p objs
 
+$(DSFML):
+	curl -L -O -# --progress-bar  http://www.sfml-dev.org/files/$(ASFML).tar.gz
+	tar -xf $(ASFML).tar.gz
+	mv $(ASFML) $(DSFML)
+	cd $(DSFML)/Frameworks/ && ln -s ../extlibs/freetype.framework
+	cd $(DSFML)/Frameworks/ && ln -s ../extlibs/sndfile.framework
+	rm $(ASFML).tar.gz
+
 clean:
 	/bin/rm -f $(OBJS) $(TMPS)
 	/bin/rm -rf objs
 
 fclean: clean
 	/bin/rm -f $(NAME)
+	/bin/rm -rf $(DSFML)
 
 re: fclean all
