--- a/42/Nibbler/hdezier-erobert/f2_dir/Makefile
+++ b/42/Nibbler/hdezier-erobert/f2_dir/Makefile
@@ -6,7 +6,7 @@
 #    By: erobert <erobert@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2015/01/05 09:31:53 by erobert           #+#    #+#              #
-#    Updated: 2015/04/08 13:13:06 by erobert          ###   ########.fr        #
+#    Updated: 2015/04/09 18:18:00 by erobert          ###   ########.fr        #
 #                                                                              #
 #******************************************************************************#
 
@@ -21,7 +21,7 @@ ASFML = SFML-2.2-osx-clang-universal
 DSFML = SFML
 CC = g++
 CFLAGS = -Wall -Wextra -Werror
-IFLAGS = -Iincs/ -I../incs/ -I$(DSFML)/include/
+IFLAGS = -Iincs/ -I../nibbler_dir/incs/ -I$(DSFML)/include/
 LFLAGS = -LSFML/lib -lsfml-graphics -lsfml-window -lsfml-system
 
 .PHONY: all clean objs_dir fclean re
