--- a/42/Nibbler/hdezier-erobert/gui_ncurses/Makefile
+++ b/42/Nibbler/hdezier-erobert/gui_ncurses/Makefile
@@ -6,11 +6,11 @@
 #    By: erobert <erobert@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2015/01/05 09:31:53 by erobert           #+#    #+#              #
-#    Updated: 2015/04/09 18:18:08 by erobert          ###   ########.fr        #
+#    Updated: 2015/04/10 14:30:29 by erobert          ###   ########.fr        #
 #                                                                              #
 #******************************************************************************#
 
-NAME = f1.so
+NAME = gui-ncurses.so
 FILES = GUINCurses.cpp
 SRCS = $(addprefix srcs/, $(FILES))
 OBJS = $(SRCS:srcs/%.cpp=objs/%.o)
@@ -18,7 +18,7 @@ INCS = $(SRCS:srcs/%.cpp=incs/%.hpp)
 TMPS = $(SRCS:.cpp=.cpp~) $(INCS:.hpp=.hpp~) Makefile~
 CC = g++
 CFLAGS = -Wall -Wextra -Werror
-IFLAGS = -Iincs/ -I../nibbler_dir/incs/
+IFLAGS = -Iincs/ -I../game/incs/
 LFLAGS = -lncurses -ltermcap
 
 .PHONY: all clean objs_dir fclean re
