--- a/42/Nibbler/hdezier-erobert/game/Makefile
+++ b/42/Nibbler/hdezier-erobert/game/Makefile
@@ -6,32 +6,29 @@
 #    By: erobert <erobert@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2015/01/05 09:31:53 by erobert           #+#    #+#              #
-#    Updated: 2015/04/09 18:17:37 by erobert          ###   ########.fr        #
+#    Updated: 2015/04/10 14:43:46 by erobert          ###   ########.fr        #
 #                                                                              #
 #******************************************************************************#
 
-NAME = e1.so
-FILES = AudioSFML.cpp
+NAME = nibbler
+FILES = Game.cpp Time.cpp Editor.cpp main.cpp
 SRCS = $(addprefix srcs/, $(FILES))
 OBJS = $(SRCS:srcs/%.cpp=objs/%.o)
-INCS = $(SRCS:srcs/%.cpp=incs/%.hpp)
+INCS = $(SRCS:srcs/%.cpp=incs/%.hpp) incs/IGUINibbler.hpp
 TMPS = $(SRCS:.cpp=.cpp~) $(INCS:.hpp=.hpp~) Makefile~
-PWD = $(shell pwd)
-ASFML = SFML-2.2-osx-clang-universal
-DSFML = SFML
 CC = g++
 CFLAGS = -Wall -Wextra -Werror
-IFLAGS = -Iincs/ -I../nibbler_dir/incs/ -I$(DSFML)/include/
-LFLAGS = -LSFML/lib -lsfml-audio
+IFLAGS = -Iincs/
+LFLAGS = -lncurses -ltermcap
 
-.PHONY: all clean objs_dir fclean re
+.PHONY: all clean objs_dir child fclean re
 
 .SILENT: objs_dir
 
-all: objs_dir $(DSFML) $(NAME)
+all: objs_dir $(NAME)
 
 $(NAME): $(OBJS)
-	$(CC) $(CFLAGS) -dynamiclib -rpath $(PWD)/SFML/lib/ -o $(NAME) $(OBJS) $(LFLAGS)
+	$(CC) $(CFLAGS) -o $(NAME) $(OBJS) $(LFLAGS)
 
 objs/%.o : srcs/%.cpp
 	$(CC) $(CFLAGS) -Iinc $(IFLAGS) -o $@ -c $^
@@ -39,20 +36,11 @@ objs/%.o : srcs/%.cpp
 objs_dir:
 	mkdir -p objs
 
-$(DSFML):
-	curl -L -O -# --progress-bar  http://www.sfml-dev.org/files/$(ASFML).tar.gz
-	tar -xf $(ASFML).tar.gz
-	mv $(ASFML) $(DSFML)
-	cd $(DSFML)/Frameworks/ && ln -s ../extlibs/freetype.framework
-	cd $(DSFML)/Frameworks/ && ln -s ../extlibs/sndfile.framework
-	rm $(ASFML).tar.gz
-
 clean:
 	/bin/rm -f $(OBJS) $(TMPS)
 	/bin/rm -rf objs
 
 fclean: clean
 	/bin/rm -f $(NAME)
-	/bin/rm -rf $(DSFML)
 
 re: fclean all
