--- a/42/Nibbler/hdezier-erobert/gui_sfml/Makefile
+++ b/42/Nibbler/hdezier-erobert/gui_sfml/Makefile
@@ -6,29 +6,33 @@
 #    By: erobert <erobert@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2015/01/05 09:31:53 by erobert           #+#    #+#              #
-#    Updated: 2015/04/09 18:06:20 by erobert          ###   ########.fr        #
+#    Updated: 2015/04/10 14:30:17 by erobert          ###   ########.fr        #
 #                                                                              #
 #******************************************************************************#
 
-NAME = nibbler
-FILES = Game.cpp Time.cpp main.cpp
+NAME = gui-sfml.so
+FILES = GUISFML.cpp
 SRCS = $(addprefix srcs/, $(FILES))
 OBJS = $(SRCS:srcs/%.cpp=objs/%.o)
-INCS = $(SRCS:srcs/%.cpp=incs/%.hpp) incs/IGUINibbler.hpp
+INCS = $(SRCS:srcs/%.cpp=incs/%.hpp)
 TMPS = $(SRCS:.cpp=.cpp~) $(INCS:.hpp=.hpp~) Makefile~
+PWD = $(shell pwd)
+ASFML = SFML-2.2-osx-clang-universal
+DSFML = ../SFML
 CC = g++
 CFLAGS = -Wall -Wextra -Werror
-IFLAGS = -Iincs/
-LFLAGS =
+IFLAGS = -Iincs/ -I../game/incs/ -I$(DSFML)/include/
+LFLAGS = -L$(DSFML)/lib -lsfml-graphics -lsfml-window -lsfml-system
 
-.PHONY: all clean objs_dir child fclean re
+.PHONY: all clean objs_dir fclean re
 
 .SILENT: objs_dir
 
-all: objs_dir $(NAME)
+all: objs_dir $(DSFML) $(NAME)
 
 $(NAME): $(OBJS)
-	$(CC) $(CFLAGS) -o $(NAME) $(OBJS) $(LFLAGS)
+	$(CC) $(CFLAGS) -dynamiclib -rpath $(PWD)/$(DSFML)/lib/ -o $(NAME) $(OBJS) \
+	$(LFLAGS)
 
 objs/%.o : srcs/%.cpp
 	$(CC) $(CFLAGS) -Iinc $(IFLAGS) -o $@ -c $^
@@ -36,11 +40,20 @@ objs/%.o : srcs/%.cpp
 objs_dir:
 	mkdir -p objs
 
+$(DSFML):
+	curl -L -O -# --progress-bar  http://www.sfml-dev.org/files/$(ASFML).tar.gz
+	tar -xf $(ASFML).tar.gz
+	mv $(ASFML) $(DSFML)
+	cd $(DSFML)/Frameworks/ && ln -s ../extlibs/freetype.framework
+	cd $(DSFML)/Frameworks/ && ln -s ../extlibs/sndfile.framework
+	rm $(ASFML).tar.gz
+
 clean:
 	/bin/rm -f $(OBJS) $(TMPS)
 	/bin/rm -rf objs
 
 fclean: clean
 	/bin/rm -f $(NAME)
+	/bin/rm -rf $(DSFML)
 
 re: fclean all
