--- a/util/Rool/config/templates/src.template
+++ b/util/Rool/config/templates/src.template
@@ -3,5 +3,17 @@
 ${CLASS_NAME}::${CLASS_NAME}(void) {
 }
 
+${CLASS_NAME}::${CLASS_NAME}(${CLASS_NAME} const &src) {
+	if (this != &src)
+		*this = src;
+}
+
 ${CLASS_NAME}::~${CLASS_NAME}(void) {
+}
+
+${CLASS_NAME}		&${CLASS_NAME}::operator=(${CLASS_NAME} const &rhs) {
+	if (this != &rhs) {
+		;
+	}
+	return (*this);
 }
