--- a/util/Rool/config/templates/src.template
+++ b/util/Rool/config/templates/src.template
@@ -17,3 +17,8 @@ ${CLASS_NAME}		&${CLASS_NAME}::operator=(${CLASS_NAME} const &rhs) {
 	}
 	return (*this);
 }
+
+std::ostream&	operator<<(std::ostream& stream, ${CLASS_NAME} const &s) {
+	stream << "" << std::endl;
+	return (stream);
+}
