--- a/42/Taskmaster/hdezier-rbernand/Makefile
+++ b/42/Taskmaster/hdezier-rbernand/Makefile
@@ -13,6 +13,7 @@ RM = rm -rf
 
 #List classes here
 CLASS = main\
+		Programs\
 		jsoncpp\
 		UI/UINcurses\
 		Master\
@@ -28,7 +29,7 @@ DEP = $(addsuffix .d, $(addprefix $(BUILD_DIR)/, $(CLASS)))
 LIBS = $(addprefix -L,$(LIB_DIR))
 
 #Flags
-CFLAGS =-MMD -Wall -Wextra -Werror -O3 -g -std=c++98
+CFLAGS =-MMD -Wall -Wextra -Werror -O3 -g -std=c++11
 LFLAGS =
 
 #Libs
