--- a/42/mod1/glfw_style/Makefile
+++ b/42/mod1/glfw_style/Makefile
@@ -13,6 +13,7 @@ RM = rm -rf
 
 #List classes here
 CLASS = main\
+		Objects/Rain\
 		Parser/Tokens/Scope\
 		Parser/Tokens/Comment\
 		Parser/Tokens/Number\
@@ -23,7 +24,8 @@ CLASS = main\
 		CocoaWin\
 
 #List interfaces here
-INTERFACE = IObject\
+INTERFACES = \
+		AObject\
 
 #Auto var
 SRC = $(addsuffix $(SRC_EXT), $(addprefix $(SRC_DIR)/, $(CLASS)))
@@ -69,8 +71,8 @@ clean :
 
 fclean :
 	$(RM) $(BUILD_DIR) $(TARGET)
-	$(RM) lib/glfw
-	$(RM) lib/glm
+	# $(RM) lib/glfw
+	# $(RM) lib/glm
 
 re : fclean all
 
