--- a/42/Nibbler/hdezier-erobert/gui_gl/Makefile
+++ b/42/Nibbler/hdezier-erobert/gui_gl/Makefile
@@ -1,34 +1,27 @@
 TARGET = gui-gl.so
 
-#Directories
 SRC_DIR = src
 INC_DIR = include
 BUILD_DIR = build
 LIB_DIR =
 
-#Options
 CC = clang++
 SRC_EXT = .cpp
 RM = rm -rf
 
-#List classes here
 CLASS = \
 		GUIGL\
 
-#List interfaces here
 INTERFACE = \
 
-#Auto var
 SRC = $(addsuffix $(SRC_EXT), $(addprefix $(SRC_DIR)/, $(CLASS)))
 OBJ = $(addsuffix .o, $(addprefix $(BUILD_DIR)/, $(CLASS)))
 DEP = $(addsuffix .d, $(addprefix $(BUILD_DIR)/, $(CLASS)))
 LIBS = $(addprefix -L,$(LIB_DIR))
 
-#Flags
 CFLAGS = -MMD -Wall -Wextra -Werror -O3 -std=c++98
 LFLAGS =
 
-#Libs
 LIB_LOCAL = \
 			lib/LoadShaders\
 
@@ -70,14 +63,12 @@ installib:
 
 .PHONY: all clean fclean re
 
-.SILENT: dirbuild dirbin
+.SILENT: dirbuild dirbin installib
 
-#Build rule
 $(TARGET) : $(OBJ)
 	@echo "\n\033[1;4;34mLNK:\033[0m\n"$^"\n\033[36mLinking objects ...\033[0m\n"
 	$(CC) $(CFLAGS) -dynamiclib $^ -o $@ $(LIBS)
 
-#Compilation rule
 $(BUILD_DIR)/%.o: $(SRC_DIR)/%$(SRC_EXT)
 	@mkdir -p $(dir $@)
 	@echo "\n\033[1;4;34mCMP:\033[0m\n"$<"\n\033[36mCompiling src ...\033[0m"
