--- a/42/mod1/glfw_style/Makefile
+++ b/42/mod1/glfw_style/Makefile
@@ -13,6 +13,7 @@ RM = rm -rf
 
 #List classes here
 CLASS = main\
+		Objects/Sea\
 		Objects/Rain\
 		Parser/Tokens/Scope\
 		Parser/Tokens/Comment\
