--- a/42/Scop/hdezier/Makefile
+++ b/42/Scop/hdezier/Makefile
@@ -18,9 +18,9 @@ CLASS = main\
 		render\
 		load_obj\
 		key_callback\
+		mouse_callback\
 		load_shaders\
 		init_camera\
-		move_camera\
 
 #List interfaces here
 INTERFACE = \
