--- a/42/Taskmaster/hdezier-rbernand/config/programs.conf
+++ b/42/Taskmaster/hdezier-rbernand/config/programs.conf
@@ -1,7 +1,7 @@
 {
   "programs": {
     "nginx": {
-      "cmd": "/usr/local/bin/nginx -c /etc/nginx/test.conf",
+      "cmd": "/usr/local/bin/nginx",
       "numprocs": 1,
       "umask": 18,
       "workingdir": "/tmp",
@@ -22,7 +22,7 @@
       "ANSWER": 42
     },
     "vogsphere": {
-      "cmd": "/usr/local/bin/vogsphere-worker --no-prefork",
+      "cmd": "/usr/local/bin/vogsphere-worker",
       "numprocs": 8,
       "umask": 63,
       "workingdir": "/tmp",
