--- a/42/Taskmaster/hdezier-rbernand/Makefile
+++ b/42/Taskmaster/hdezier-rbernand/Makefile
@@ -1,6 +1,19 @@
-TARGET = bin/runner
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: leeios <leeios@student.42.fr>              +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2015/08/15 14:36:05 by leeios            #+#    #+#              #
+#    Updated: 2015/08/15 14:38:02 by leeios           ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
+TARGET = runner
 
 #Directories
+BIN_DIR = bin
 SRC_DIR = src
 INC_DIR = include
 BUILD_DIR = build
@@ -13,11 +26,12 @@ RM = rm -rf
 
 #List classes here
 CLASS = main\
+		Log\
 		Process\
 		jsoncpp\
 		UI/UINcurses\
-		Master\
 		UI/AWindow\
+		Master\
 
 #List interfaces here
 INTERFACE = \
@@ -26,21 +40,20 @@ INTERFACE = \
 SRC = $(addsuffix $(SRC_EXT), $(addprefix $(SRC_DIR)/, $(CLASS)))
 OBJ = $(addsuffix .o, $(addprefix $(BUILD_DIR)/, $(CLASS)))
 DEP = $(addsuffix .d, $(addprefix $(BUILD_DIR)/, $(CLASS)))
-LIBS = $(addprefix -L,$(LIB_DIR))
 
 #Flags
-CFLAGS =-MMD -Wall -Wextra -Werror -O3 -g -std=c++11
+CFLAGS = -Wall -Wextra -Werror -O3 -std=c++11
 LFLAGS =
 
 #Libs
 LIB_LOCAL = \
 
 LIB_GLOBAL = \
-			ncurses\
+							ncurses\
 
 LIB_OTHER = \
 
-LIBS += $(addsuffix /build, $(addprefix -L, $(LIB_LOCAL)))
+LIBS += $(addsuffix /lib, $(addprefix -L, $(LIB_LOCAL)))
 LIBS += $(addprefix -l,$(LIB_GLOBAL))
 LIBS += $(LIB_OTHER)
 
@@ -49,32 +62,33 @@ INC += $(addprefix -I,$(INC_DIR))
 INC += $(addsuffix /include, $(addprefix -I, $(LIB_LOCAL)))
 
 #RULES
-all : dirbin $(TARGET)
+all : dirbin $(BIN_DIR)/$(TARGET)
 
 clean :
 	$(RM) $(BUILD_DIR)
 
 fclean :
-	$(RM) $(BUILD_DIR) $(TARGET)
+	$(RM) $(BUILD_DIR) $(TARGET) $(BIN_DIR)
 
 re : fclean all
 
 dirbin:
-	mkdir -p bin
+	mkdir -p $(BIN_DIR)
 
 .PHONY: all clean fclean re
 
-.SILENT: dirbuild dirbin
+.SILENT: dirlib dirbuild dirbin
 
 #Build rule
-$(TARGET) : $(OBJ)
-	@echo "\n\033[1;4;34mLNK:\033[0m\n"$^"\n\033[36mLinking objects ...\033[0m\n"
+$(BIN_DIR)/$(TARGET) : $(OBJ)
+	@echo "\n\033[1;4;34mLINK:\033[0m\n"$^"\n\033[36mLinking objects ...\033[0m\n"
 	$(CC) $(CFLAGS) $^ -o $@ $(LIBS)
+	@ln -sf $(BIN_DIR)/$(TARGET) $(TARGET)
 
 #Compilation rule
 $(BUILD_DIR)/%.o: $(SRC_DIR)/%$(SRC_EXT)
 	@mkdir -p $(dir $@)
-	@echo "\n\033[1;4;34mCMP:\033[0m\n"$<"\n\033[36mCompiling src ...\033[0m"
+	@echo "\n\033[1;4;34mCOMPILE:\033[0m\n"$<"\n\033[36mCompiling src ...\033[0m"
 	$(CC) $(CFLAGS) $(INC) -o $@ -c $<
 
 -include $(DEP)
