--- a/42/Taskmaster/hdezier-rbernand/config/programs.conf
+++ b/42/Taskmaster/hdezier-rbernand/config/programs.conf
@@ -1,7 +1,7 @@
 {
   "programs": {
     "thor": {
-      "cmd": "/usr/local/bin/thor",
+      "cmd": "/usr/bin/top",
       "numprocs": 1,
       "umask": 18,
       "workingdir": "/tmp",
